Fix logging in text not aligned

--- a/Projects/Frontend/src/components/shared/Header/components/LoggedInContainer/LoggedInContainer.scss
+++ b/Projects/Frontend/src/components/shared/Header/components/LoggedInContainer/LoggedInContainer.scss
@@ -1,4 +1,4 @@
-.login-container[data-logged-in=true] {
+.login-container[data-logged-in] {
   display: grid;
   gap: .5em;
   place-items: center;
